Dev/src/LeanData/objects/Buyer_Persona__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Logic__c</fullName>
        <label>ContactLogic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Logic__c</fullName>
        <label>LeadLogic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona_Order__c</fullName>
        <label>PersonaOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Buyer Persona</label>
    <nameField>
        <label>Buyer Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyer Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>